--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,8 +27,9 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.core:core-ktx:1.0.2'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview-selection:1.0.0'
+    def recycler_version = "1.1.0-alpha06"
+    implementation "androidx.recyclerview:recyclerview:$recycler_version"
+    implementation "androidx.recyclerview:recyclerview-selection:$recycler_version"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
     testImplementation 'junit:junit:4.12'
